# nodepool

./: .dockerignore  .gitignore  .gitreview  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  Dockerfile  Dockerfile.opendev  Dockerfile.zuul  README  README.rst  TESTING.rst  bindep.txt  fake-sql.py  fake.sql  fake.yaml  noxfile.py  other-requirements.txt  out  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
bash-completion/: nodepool
contrib/statsd_exporter/: statsd-mapping.yaml
devstack/: localrc  plugin.sh  settings
doc/: requirements.txt
nodepool/: 0001-WIP-Implement-EC2-fleet-API-in-AWS-driver.patch  allocation.py  builder.py  config.py  exceptions.py  fakeprovider.py  image.py  jenkins_manager.py  jobs.py  kvm_provider_manager.py  latch.py  launcher.py  logconfig.py  mqtt.py  myjenkins.py  node.py  nodedb.py  nodepool.py  nodeutils.py  parser.py  provider_manager.py  sshclient.py  stats.py  status.py  task_manager.py  version.py  webapp.py  zk.py  zk_auth.py
scripts/: reboot-image.sh
tools/: Dockerfile_Testing  README.md  build-image.sh  check_devstack_plugin.sh  containers-storage.conf  docker-compose-nodepool.yaml  docker-compose.yaml  fake-dib.yaml  fake-servers.py  fake-workload.py  fake.yaml  functional-test-check.sh  mount-image.sh  node-request-stats.py  nodepool-graceful-stop  nodepool.yaml  pip.conf.arm64  print-zk.py  projectatomic-ppa.asc  simulator.py  test-setup-docker.sh  test-setup.sh  test_openstack.py  uid_entrypoint.sh  unmount-image.sh  upper-constraints.txt.arm64  zmq-stream.py  zookeeper-update-auth.py
(+495 files in other folders)
