[metadata]
name = nodepool
summary = Node pool management for a distributed test infrastructure
description_file =
    README.rst
author = Zuul Team
author_email = zuul-discuss@lists.zuul-ci.org
home_page = https://zuul-ci.org/
python_requires = >= 3.11
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.11

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    nodepool = nodepool.cmd.nodepoolcmd:main
    nodepool-builder = nodepool.cmd.builder:main
    nodepool-launcher = nodepool.cmd.launcher:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[extras]
nodepool_base =
    yappi
    objgraph
    python-logstash-async

[flake8]
# These are ignored intentionally in zuul projects;
# please don't submit patches that solely correct them or enable them.
ignore = E124,E125,E129,E402,E741,W503,W504
show-source = True
exclude = .venv,.tox,dist,doc,build,*.egg
